--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY Portfolio</title>
     <!-- ===== CSS Files ===== -->
      <link rel="stylesheet" href="style.css">
-     <link rel="stylesheet" href="/css/color.css">
+     <link rel="stylesheet" href="css/color.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-     <link rel="stylesheet" href="/css/responsive.css">
-     <link rel="stylesheet" href="/css/style-switcher.css">
-     <link rel="stylesheet" href="/css/color.css" class="alternate-style" title="color-1" disabled>
-     <link rel="stylesheet" href="/css/color1.css" class="alternate-style" title="color-2" disabled>
-     <link rel="stylesheet" href="/css/color2.css" class="alternate-style" title="color-3" disabled>
-     <link rel="stylesheet" href="/css/color3.css" class="alternate-style" title="color-4" disabled>
-     <link rel="stylesheet" href="/css/color4.css" class="alternate-style" title="color-5" disabled>
+     <link rel="stylesheet" href="css/responsive.css">
+     <link rel="stylesheet" href="css/style-switcher.css">
+     <link rel="stylesheet" href="css/color.css" class="alternate-style" title="color-1" disabled>
+     <link rel="stylesheet" href="css/color1.css" class="alternate-style" title="color-2" disabled>
+     <link rel="stylesheet" href="css/color2.css" class="alternate-style" title="color-3" disabled>
+     <link rel="stylesheet" href="css/color3.css" class="alternate-style" title="color-4" disabled>
+     <link rel="stylesheet" href="css/color4.css" class="alternate-style" title="color-5" disabled>
 </head>
 <body>
     <!-- Main Container -->
@@ -51,7 +51,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat eveniet ad sed totam itaque veniam corrupti impedit aliquid, debitis vitae eaque est voluptas quasi, amet consequatur. Earum, maiores perspiciatis. Error?</p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
-                        <div class="home-img padd-15"><img src="/images/sample1.png" alt=""></div>
+                        <div class="home-img padd-15"><img src="images/sample1.png" alt=""></div>
                     </div>
                 </div>
             </section>
@@ -374,42 +374,42 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/images/portfolio-1.png" alt="#">
+                                    <img src="images/portfolio-1.png" alt="#">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/images/portfolio-2.jpg" alt="#">
+                                    <img src="images/portfolio-2.jpg" alt="#">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/images/portfolio-3.jpg" alt="#">
+                                    <img src="images/portfolio-3.jpg" alt="#">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/images/portfolio-4.jpg" alt="#">
+                                    <img src="images/portfolio-4.jpg" alt="#">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/images/portfolio-5.jpg" alt="#">
+                                    <img src="images/portfolio-5.jpg" alt="#">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/images/portfolio-6.jpg" alt="#">
+                                    <img src="images/portfolio-6.jpg" alt="#">
                                 </div>
                             </div>
                         </div>
